# axum-demo

./: Cargo.toml
src/: error.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_devs.rs
